reworked the whole status, hashtag, and feed tables
