# api/api/default.service.ts
@@ -2,7 +2,7 @@
  * twitter-api
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * OpenAPI spec version: 2019-11-19T21:03:11Z
+ * OpenAPI spec version: 2019-11-21T00:51:46Z
  *
  *
  * NOTE: This class is auto generated by the swagger code generator program.
@@ -20,14 +20,15 @@ import { Observable }                                        from 'rxjs/Observab
 
 import { AuthResponse } from '../model/authResponse';
 import { Empty } from '../model/empty';
+import { FeedStatusesResponse } from '../model/feedStatusesResponse';
+import { HashtagStatusesResponse } from '../model/hashtagStatusesResponse';
 import { IsFollowingResponse } from '../model/isFollowingResponse';
 import { PostStatusRequest } from '../model/postStatusRequest';
 import { ProfileResponse } from '../model/profileResponse';
 import { Response } from '../model/response';
 import { SignupRequest } from '../model/signupRequest';
 import { StatusResponse } from '../model/statusResponse';
-import { StatusesIndexResponse } from '../model/statusesIndexResponse';
-import { StatusesLastResponse } from '../model/statusesLastResponse';
+import { StoryStatusesResponse } from '../model/storyStatusesResponse';
 import { UpdateProfileRequest } from '../model/updateProfileRequest';
 import { UserResponse } from '../model/userResponse';
 import { UsersResponse } from '../model/usersResponse';
@@ -215,34 +216,36 @@ export class DefaultService {
      *
      *
      * @param pageSize
-     * @param startIndex
      * @param hashtag
+     * @param lastHashtag
+     * @param lastTimestamp
      * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
      * @param reportProgress flag to report request and response progress.
      */
-    public statusesHashtagHashtagGet(pageSize: string, startIndex: string, hashtag: string, observe?: 'body', reportProgress?: boolean): Observable<StatusesIndexResponse>;
-    public statusesHashtagHashtagGet(pageSize: string, startIndex: string, hashtag: string, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<StatusesIndexResponse>>;
-    public statusesHashtagHashtagGet(pageSize: string, startIndex: string, hashtag: string, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<StatusesIndexResponse>>;
-    public statusesHashtagHashtagGet(pageSize: string, startIndex: string, hashtag: string, observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
+    public statusesHashtagHashtagGet(pageSize: string, hashtag: string, lastHashtag?: string, lastTimestamp?: string, observe?: 'body', reportProgress?: boolean): Observable<HashtagStatusesResponse>;
+    public statusesHashtagHashtagGet(pageSize: string, hashtag: string, lastHashtag?: string, lastTimestamp?: string, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<HashtagStatusesResponse>>;
+    public statusesHashtagHashtagGet(pageSize: string, hashtag: string, lastHashtag?: string, lastTimestamp?: string, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<HashtagStatusesResponse>>;
+    public statusesHashtagHashtagGet(pageSize: string, hashtag: string, lastHashtag?: string, lastTimestamp?: string, observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
 
         if (pageSize === null || pageSize === undefined) {
             throw new Error('Required parameter pageSize was null or undefined when calling statusesHashtagHashtagGet.');
-        }
-
-        if (startIndex === null || startIndex === undefined) {
-            throw new Error('Required parameter startIndex was null or undefined when calling statusesHashtagHashtagGet.');
         }
 
         if (hashtag === null || hashtag === undefined) {
             throw new Error('Required parameter hashtag was null or undefined when calling statusesHashtagHashtagGet.');
         }
 
+
+
         let queryParameters = new HttpParams({encoder: new CustomHttpUrlEncodingCodec()});
+        if (lastHashtag !== undefined && lastHashtag !== null) {
+            queryParameters = queryParameters.set('lastHashtag', <any>lastHashtag);
+        }
         if (pageSize !== undefined && pageSize !== null) {
             queryParameters = queryParameters.set('pageSize', <any>pageSize);
         }
-        if (startIndex !== undefined && startIndex !== null) {
-            queryParameters = queryParameters.set('startIndex', <any>startIndex);
+        if (lastTimestamp !== undefined && lastTimestamp !== null) {
+            queryParameters = queryParameters.set('lastTimestamp', <any>lastTimestamp);
         }
 
         let headers = this.defaultHeaders;
@@ -261,7 +264,7 @@ export class DefaultService {
             'application/json'
         ];
 
-        return this.httpClient.get<StatusesIndexResponse>(`${this.basePath}/statuses/hashtag/${encodeURIComponent(String(hashtag))}`,
+        return this.httpClient.get<HashtagStatusesResponse>(`${this.basePath}/statuses/hashtag/${encodeURIComponent(String(hashtag))}`,
             {
                 params: queryParameters,
                 withCredentials: this.configuration.withCredentials,
@@ -402,34 +405,36 @@ export class DefaultService {
      *
      *
      * @param pageSize
-     * @param startIndex
      * @param handle
+     * @param lastHandle
+     * @param lastTimestamp
      * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
      * @param reportProgress flag to report request and response progress.
      */
-    public usersHandleFeedGet(pageSize: string, startIndex: string, handle: string, observe?: 'body', reportProgress?: boolean): Observable<StatusesIndexResponse>;
-    public usersHandleFeedGet(pageSize: string, startIndex: string, handle: string, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<StatusesIndexResponse>>;
-    public usersHandleFeedGet(pageSize: string, startIndex: string, handle: string, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<StatusesIndexResponse>>;
-    public usersHandleFeedGet(pageSize: string, startIndex: string, handle: string, observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
+    public usersHandleFeedGet(pageSize: string, handle: string, lastHandle?: string, lastTimestamp?: string, observe?: 'body', reportProgress?: boolean): Observable<FeedStatusesResponse>;
+    public usersHandleFeedGet(pageSize: string, handle: string, lastHandle?: string, lastTimestamp?: string, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<FeedStatusesResponse>>;
+    public usersHandleFeedGet(pageSize: string, handle: string, lastHandle?: string, lastTimestamp?: string, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<FeedStatusesResponse>>;
+    public usersHandleFeedGet(pageSize: string, handle: string, lastHandle?: string, lastTimestamp?: string, observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
 
         if (pageSize === null || pageSize === undefined) {
             throw new Error('Required parameter pageSize was null or undefined when calling usersHandleFeedGet.');
-        }
-
-        if (startIndex === null || startIndex === undefined) {
-            throw new Error('Required parameter startIndex was null or undefined when calling usersHandleFeedGet.');
         }
 
         if (handle === null || handle === undefined) {
             throw new Error('Required parameter handle was null or undefined when calling usersHandleFeedGet.');
         }
 
+
+
         let queryParameters = new HttpParams({encoder: new CustomHttpUrlEncodingCodec()});
+        if (lastHandle !== undefined && lastHandle !== null) {
+            queryParameters = queryParameters.set('lastHandle', <any>lastHandle);
+        }
         if (pageSize !== undefined && pageSize !== null) {
             queryParameters = queryParameters.set('pageSize', <any>pageSize);
         }
-        if (startIndex !== undefined && startIndex !== null) {
-            queryParameters = queryParameters.set('startIndex', <any>startIndex);
+        if (lastTimestamp !== undefined && lastTimestamp !== null) {
+            queryParameters = queryParameters.set('lastTimestamp', <any>lastTimestamp);
         }
 
         let headers = this.defaultHeaders;
@@ -448,7 +453,7 @@ export class DefaultService {
             'application/json'
         ];
 
-        return this.httpClient.get<StatusesIndexResponse>(`${this.basePath}/users/${encodeURIComponent(String(handle))}/feed`,
+        return this.httpClient.get<FeedStatusesResponse>(`${this.basePath}/users/${encodeURIComponent(String(handle))}/feed`,
             {
                 params: queryParameters,
                 withCredentials: this.configuration.withCredentials,
@@ -1016,9 +1021,9 @@ export class DefaultService {
      * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
      * @param reportProgress flag to report request and response progress.
      */
-    public usersHandleStoryGet(pageSize: string, handle: string, ownerHandle?: string, id?: string, observe?: 'body', reportProgress?: boolean): Observable<StatusesLastResponse>;
-    public usersHandleStoryGet(pageSize: string, handle: string, ownerHandle?: string, id?: string, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<StatusesLastResponse>>;
-    public usersHandleStoryGet(pageSize: string, handle: string, ownerHandle?: string, id?: string, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<StatusesLastResponse>>;
+    public usersHandleStoryGet(pageSize: string, handle: string, ownerHandle?: string, id?: string, observe?: 'body', reportProgress?: boolean): Observable<StoryStatusesResponse>;
+    public usersHandleStoryGet(pageSize: string, handle: string, ownerHandle?: string, id?: string, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<StoryStatusesResponse>>;
+    public usersHandleStoryGet(pageSize: string, handle: string, ownerHandle?: string, id?: string, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<StoryStatusesResponse>>;
     public usersHandleStoryGet(pageSize: string, handle: string, ownerHandle?: string, id?: string, observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
 
         if (pageSize === null || pageSize === undefined) {
@@ -1058,7 +1063,7 @@ export class DefaultService {
             'application/json'
         ];
 
-        return this.httpClient.get<StatusesLastResponse>(`${this.basePath}/users/${encodeURIComponent(String(handle))}/story`,
+        return this.httpClient.get<StoryStatusesResponse>(`${this.basePath}/users/${encodeURIComponent(String(handle))}/story`,
             {
                 params: queryParameters,
                 withCredentials: this.configuration.withCredentials,
