# api/model/models.ts
@@ -1,14 +1,16 @@
 export * from './authResponse';
 export * from './empty';
+export * from './feedStatusesResponse';
+export * from './feedStatusesResponseStatuses';
+export * from './hashtagStatusesResponse';
+export * from './hashtagStatusesResponseStatuses';
 export * from './isFollowingResponse';
 export * from './postStatusRequest';
 export * from './profileResponse';
 export * from './response';
 export * from './signupRequest';
 export * from './statusResponse';
-export * from './statusesIndexResponse';
-export * from './statusesIndexResponseStatuses';
-export * from './statusesLastResponse';
+export * from './storyStatusesResponse';
 export * from './updateProfileRequest';
 export * from './userResponse';
 export * from './usersResponse';
