# api/model/statusResponse.ts
@@ -2,7 +2,7 @@
  * twitter-api
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * OpenAPI spec version: 2019-11-19T21:03:11Z
+ * OpenAPI spec version: 2019-11-21T00:51:46Z
  * 
  *
  * NOTE: This class is auto generated by the swagger code generator program.
@@ -32,4 +32,5 @@ export interface StatusResponse {
      * The status id
      */
     id?: string;
+    timestamp?: number;
 }
